Loading icon(ui) and logo animation complete